#29 arabic test size change in l1

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -69,6 +69,9 @@
       "resendCode":"ألم تحصل على الرمز؟",
       "resendText":"أعد إرسال الرمز",
       "emailChanged":"تم تغيير عنوان البريد الإلكتروني بنجاح.",
+      "paraPhoneNumber":"الرجاء إدخال رقم الهاتف الجديد الذي ترغب في تغييره.",
+      "countryCode":"حدد رمز الدولة",
+      "changePhoneNumber":"غير رقم الهاتف",
       "phoneChanged":"تم تغيير رقم الهاتف بنجاح.",
       "verifyNumber":"تحقق من رقم الهاتف",
       "verifyNumberOtpPara":"لقد أرسلنا OTP في بريدك الإلكتروني. الرجاء إدخال OTP للتحقق.",
