#29 address modal edit done

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -94,7 +94,9 @@
       "country":"دولة",
       "state":"ولاية",
       "district":"يصرف",
-      "code":"رمز بريدي"
+      "code":"رمز بريدي",
+      "saveChanges":"حفظ التغييرات",
+      "cancelEdit":"إلغاء التحرير"
     },
     "setting":{
       "heading":"جلسة",
