#29 verify text added

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -34,6 +34,7 @@
       "see details": "انظر التفاصيل",
       "buy now": "اشتري الآن",
       "available seat": "مقعد متاح:",
+      "verify":"يؤكد",
       "deleteAccount":"حذف الحساب",
       "logOut":"تسجيل خروج"
     }
