#29 PR issue fixed

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -96,6 +96,7 @@
       "state":"ولاية",
       "district":"يصرف",
       "code":"رمز بريدي",
+      "addressChangeSucccessful":"تمت إضافة عنوان جديد",
       "saveChanges":"حفظ التغييرات",
       "cancelEdit":"إلغاء التحرير"
     },
