--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -119,18 +119,7 @@
       "addressOneError":"الرجاء إدخال الرمز البريدي",
       "addressTwoError":"الرجاء إدخال العنوان الثاني",
       "errorMessageForOTP":"الرجاء إدخال OTP",
-      "errorMessage": "لا يمكن العثور على هذا البريد الإلكتروني ، تأكد من أن البريد الإلكتروني غير صحيح ",
-      "otpError": "غير معثور عليه",
-      "numberError": "Invalid phone number"
-    }
-  },
-  "modal":{
-    "forgotPassword":{
-      "text":"يرجى إدخال بريدك الإلكتروني المسجل أو رقم هاتفك لتلقي رابط إعادة التعيين.",
-      "phone":"رقم الهاتف غير موجود",
-      "email":"البريد الإلكتروني غير موجود",
-      "invalidEmail" : "بريد إلكتروني خاطئ",
-      "invalidNumber" : "رقم الهاتف غير صحيح"
+      "invalidOtp":"لرجاء إدخال الرمز Otp"
     }
   },
   "signUpForm": {
@@ -147,12 +136,8 @@
   },
   "authentication": {
     "invalidEmail": "بريد إلكتروني خاطئ",
-    "invalidPhone" : "رقم الهاتف غير صالح",
-    "invalidOtp": "otp غير صالح",
     "invalidPassword": "رمز مرور خاطئ",
-    "invalidNumber": "رقم الهاتف غير صحيح",
-    "passwordLength": "طول كلمة المرور قصير جدًا.",
-    "passwordNotMatched":"كلمة المرور غير متطابقة",
+    "enterMobileNumber": "تأكد من أن البريد الإلكتروني",
     "strings": {
       "incChar": "يتألف من 6 أحرف على الأقل",
       "incNum": "يشمل الرقم",
@@ -164,10 +149,9 @@
       "signUp": "اشتراك",
       "writeEmail": "اكتب بريدك الإلكتروني",
       "writePassword": "اكتب كلمة المرور الخاصة بك",
-      "writeName": "اكتب اسمك",
       "name": "اسم",
       "email": "بريد إلكتروني",
-      "phoneNumber": "رقم التليفون",
+      "phone number": "رقم التليفون",
       "continue": "يكمل",
       "forgetPassword": "هل نسيت كلمة السر",
       "newUser": "ليس لديك حساب؟",
@@ -177,26 +161,9 @@
       "invalidNumber": "رقم غير صالح",
       "namePlaceholder": "اكتب الرقم",
       "emailPlaceholder": "اكتب بريدا الكترونيا",
-      "errorMessage":"لا يمكن العثور على هذا البريد الإلكتروني ، تأكد من أن البريد الإلكتروني غير صحيح "
-    }
-  },
-  "userProfile": {
-    "accountDetails": {
-      "name": "اسم",
-      "placeholder": "اسم المستخدم",
-      "email": "بريد إلكتروني",
-      "emailPlaceholder": "John.doe@gmail.com",
-      "phoneNumber": "رقم التليفون",
-      "saveChanges": "احفظ التغييرات",
-      "changeAvatar": "تغيير الصورة الرمزية"
-    },
-    "changePassword":{
-      "currentPassword":"كلمة السر الحالية",
-      "newPassword":"كلمة المرور الجديدة",
-      "confirmNewPassword":"تأكيد كلمة المرور الجديدة",
-      "passwordSame":"كلمة المرور ليست هي نفسها",
-      "placeholder":"اكتب كلمة المرور",
-      "saveCanges":"احفظ التغييرات"
+      "errorMessage":"لا يمكن العثور على هذا البريد الإلكتروني ، تأكد من أن البريد الإلكتروني غير صحيح ",
+      "oldUser":"يدا الكترونيا",
+      "successfully":"الإلكتروني ، تأكد من أن"
     }
   },
   "header": {
