--- a/i18n/en.json
+++ b/i18n/en.json
@@ -89,16 +89,6 @@
       "heading":"Log out of your account",
       "para":"Are you sure you want to log out of your account now?"
     },
-      "forgotPassword":{
-        "text":"Please enter your registered email or phone number to receive the reset link.",
-        "phone":"Phone number not found",
-        "email":"Email not found",
-        "invalidEmail" : "Invalid email",
-        "invalidNumber" : "Invalid phone number"
-      },
-    "header":{
-      "signUp": "Create account",
-      "login": "Login to your account",
     "deleteModal":{
       "heading":"Delete account",
       "para":"Are you sure you want to delete your account now?"
@@ -125,9 +115,6 @@
     },
     "error":{
       "mailError":"Email is not valid.",
-      "errorMessage": "This email can’t be found, make sure email is incorrect",
-      "otpError": "Not Found",
-      "numberError": "Invalid phone number"
       "passwordMatchError":"New password and Confirm new password not match ",
       "countryError":"Please select an Country",
       "stateError":"Please select an State",
@@ -135,7 +122,7 @@
       "postalCodeError":"Please enter Postal Code",
       "addressOneError":"Please enter Address One",
       "addressTwoError":"Please enter Address Two",
-      "errorMessageForOTP":"Please enter OTP"
+      "invalidOtp":"Invalid Otp"
     }
   },
   "signUpForm": {
@@ -152,12 +139,8 @@
   },
   "authentication": {
     "invalidEmail": "Invalid email",
-    "invalidPhone" : "Invalid phone",
-     "invalidOtp": "Invalid otp",
-    "invalidNumber": "Invalid phone number",
-    "passwordLength": "Password length too short.",
-    "passwordNotMatched":"Password not matched",
-    "invalidPassword" : "Invalid Password",
+    "invalidPassword": "Invalid password",
+    "enterMobileNumber": "Enter Mobile Number",
     "strings": {
       "incChar": "Includes at least 6 characters",
       "incNum": "Includes number",
@@ -181,29 +164,13 @@
       "invalidNumber": "Invalid number",
       "namePlaceholder": "Name",
       "emailPlaceholder": "Email",
-      "errorMessage":"This email or password is incorrect, please try again"
+      "errorMessage":"This email or password is incorrect, please try again",
+      "oldUser":"Already have account?",
+      "successfully":"Successfully"
     }
   },
-  "userProfile":{
-    "accountDetails":{
-      "name":"Name",
-      "placeholder":"User name",
-      "email":"Email",
-      "emailPlaceholder":"John.doe@gmail.com",
-      "phoneNumber":"Phone number",
-      "saveChanges":"Save changes",
-      "changeAvatar":"Change avatar",
-      "oldUser": "Already have account? ",
-      "signIn": "Log in",
-     },
-     "changePassword":{
-      "currentPassword":"Current password",
-      "newPassword":"New password",
-      "confirmNewPassword":"Confirm new password",
-      "passwordSame":"Passwords are not same",
-      "placeholder":"Write password",
-      "saveCanges":"Save changes"
-    }
-  }
- }
+  "header":{
+    "signUp": "Create account",
+    "login": "Login to your account"
+  }  
 }
