--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -288,5 +288,24 @@
     "workshopParagraphSecond": "لوريم إيبسوم هو ببساطة نص شكلي يستخدم في صناعة الطباعة والتنضيد. كان Lorem Ipsum هو النص الوهمي القياسي في الصناعة منذ القرن الخامس عشر الميلادي ، عندما أخذت طابعة غير معروفة لوحًا من النوع وتدافعت عليه لعمل كتاب عينة. لقد نجت ليس فقط خمسة قرون ، ولكن أيضًا القفزة في التنضيد الإلكتروني.",
     "workshopParagraphThird": "لوريم إيبسوم هو ببساطة نص شكلي يستخدم في صناعة الطباعة والتنضيد. كان Lorem Ipsum هو النص الوهمي القياسي في الصناعة منذ القرن الخامس عشر الميلادي ، عندما أخذت طابعة غير معروفة لوحًا من النوع وتدافعت عليه لعمل كتاب عينة. لقد نجت ليس فقط خمسة قرون ، ولكن أيضًا القفزة في التنضيد الإلكتروني.",
     "selectDate":"اختر من التقويم"
+  },
+  "productPage":{
+    "visitStore":"قم بزيارة المعرض او المتجر",
+    "totalProduct": "إجمالي المنتج",
+     "productSold": "بيع المنتج",
+     "responseRate":"معدل الاستجابة",
+     "joinedSince" :"انضم منذ ذلك الحين",
+     "aboutProduct": "حول المنتج",
+     "customerRating":"تقييم العملاء",
+     "customerQuestions":"أسئلة العملاء",
+     "addToCart":"Add to cart",
+     "buyNow":"اشتري الآن",
+     "size": "مقاس",
+     "colors": "الألوان",
+     "question":"سؤال",
+     "condition":"حالة",
+     "currentQuantity": "الكمية الحالية",
+     "material":"مادة",
+     "delivery":"توصيل"
   }
 }
