--- a/i18n/en.json
+++ b/i18n/en.json
@@ -321,7 +321,7 @@
   "buyNow":"Buy now",
   "size": "Size",
   "colors": "Colors",
-  "question":"Question",
+  "question":"Question:",
   "condition":"Condition",
   "currentQuantity": "Current quantity",
   "material":"Material",
