#25 error message text changes

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -139,7 +139,8 @@
     "backToLogin": "العودة إلى تسجيل الدخول",
     "continue": "يكمل",
     "passwordLength": "يجب ألا يقل عن 8 أحرف",
-    "errorMessage": "لا يمكن العثور على هذا البريد الإلكتروني ، تأكد من أن البريد الإلكتروني غير صحيح "
+    "errorMessage": "لا يمكن العثور على هذا البريد الإلكتروني ، تأكد من أن البريد الإلكتروني غير صحيح ",
+    "unexpectedError":"يمكن العثور على هذا البريد الإلكتروني ، تأكد م"
   },
   "authentication": {
     "invalidEmail": "بريد إلكتروني خاطئ",
