--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -166,7 +166,8 @@
       "errorMessage":"لا يمكن العثور على هذا البريد الإلكتروني ، تأكد من أن البريد الإلكتروني غير صحيح ",
       "oldUser":"يدا الكترونيا",
       "successfully":"الإلكتروني ، تأكد من أن",
-      "forgotPasswordText":"لا يمكن العثور على هذا البريد الإلكتروني ، تأكد من أن البريد الإلكتروني غير ص"
+      "forgotPasswordText":"لا يمكن العثور على هذا البريد الإلكتروني ، تأكد من أن البريد الإلكتروني غير ص",
+      "forgotPasswordLink":"يرجى التحقق من بريدك الإلكتروني المسجل أو رقم هاتفك"
     }
   },
   "header": {
