#52 add loader on button

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -68,7 +68,7 @@
       "emailPara":"الرجاء إدخال عنوان البريد الإلكتروني الجديد الذي ترغب في تغييره.",
       "email":"بريد إلكتروني",
       "verifyOtp":"التحقق من البريد الإلكتروني",
-      "emailOtpPara":"لقد أرسلنا OTP في بريدك الإلكتروني. الرجاء إدخال OTP للتحقق.",
+      "emailOtpPara":"لقد أرسلنا Otp في بريدك الإلكتروني. الرجاء إدخال Otp للتحقق.",
       "resendCode":"ألم تحصل على الرمز؟",
       "resendText":"أعد إرسال الرمز",
       "emailChanged":"تم تغيير عنوان البريد الإلكتروني بنجاح.",
