required message show

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -161,6 +161,7 @@
     "invalidPassword": "رمز مرور خاطئ",
     "invalidNumber": "أحرف على الأقل",
     "enterMobileNumber": "تأكد من أن البريد الإلكتروني",
+    "required":"مطلوب",
     "strings": {
       "incChar": "يتألف من 6 أحرف على الأقل",
       "incNum": "يشمل الرقم",
