--- a/i18n/en.json
+++ b/i18n/en.json
@@ -164,6 +164,7 @@
     "invalidPassword": "Invalid password",
     "invalidNumber": "Invalid Number",
     "enterMobileNumber": "Enter Mobile Number",
+    "required":"Required",
     "strings": {
       "incChar": "Includes at least 6 characters",
       "incNum": "Includes number",
