--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -364,5 +364,16 @@
       "subHeading":"باستثناء أن هناك رغبة غير متوقعة.",
       "buttonText":"يتعلم أكثر"
     }
+ },
+ "footer":{
+  "copyrightName":"© حقوق الطبع والنشر لاسم الشركة، 2021",
+  "text1":"قوائم الامنيات",
+  "text2":"الدردشات",
+  "text3":"طلباتي",
+  "text4":"ملفي",
+  "text5":"معلومات عنا",
+  "text6":"البنود و الظروف",
+  "text7":"سياسة الخصوصية",
+  "text8":"مركز المساعدة"
  } 
 }
