--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -375,5 +375,22 @@
   "text6":"البنود و الظروف",
   "text7":"سياسة الخصوصية",
   "text8":"مركز المساعدة"
+ },
+ "Categories":{
+  "apparels":"ملابس",
+  "tops":"قمم",
+  "bottoms":"قيعان",
+  "tSTanks":"تي شيرت والدبابات",
+  "shirts":"قمصان وقمصان",
+  "hoodies":"هوديس وبلوزات",
+  "cardigans":"بالأزرار والسترات الصوفية",
+  "jacket":"سترة وسترات",
+  "jogger":"عداء ببطء وبنطلون رياضي",
+  "shorts":"السراويل القصيرة",
+  "tights":"الجوارب",
+  "chinos":"تشينو",
+  "jeans":"جينز",
+  "trackpants":"بنطال رياضي",
+  "sneakers":"أحذية رياضية"
  } 
 }
