--- a/i18n/en.json
+++ b/i18n/en.json
@@ -335,5 +335,8 @@
   "jeans":"Jeans",
   "trackpants":"Trackpants",
   "sneakers":"Sneakers"
- }
+ },
+ "apparelCategories":{
+  "heading":"Apparel categories"
+  }
 }
