--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -151,7 +151,8 @@
   },
   "checkOutNow":{
     "backButtonText":"الدفع",
-    "addrestext":"عنوان التسليم"
+    "addrestext":"عنوان التسليم",
+    "totalPrice":"السعر الكلي:"
   },
   "signUpForm": {
     "login": "تسجيل الدخول",
