--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -395,6 +395,8 @@
  },
  "apparelCategories":{
   "heading":"فئات الملابس",
-  "noData":"لاتوجد بيانات"
+  "noData":"لاتوجد بيانات",
+  "SearchNofound":"لا يمكن العثور على البحث",
+  "tryAnother":"لا يمكن العثور على كلمتك الرئيسية، يرجى تجربة كلمة رئيسية أخرى"
   }
 }
