--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -367,14 +367,14 @@
  },
  "footer":{
   "copyrightName":"© حقوق الطبع والنشر لاسم الشركة، 2021",
-  "text1":"قوائم الامنيات",
-  "text2":"الدردشات",
-  "text3":"طلباتي",
-  "text4":"ملفي",
-  "text5":"معلومات عنا",
-  "text6":"البنود و الظروف",
-  "text7":"سياسة الخصوصية",
-  "text8":"مركز المساعدة"
+  "wishlists":"قوائم الامنيات",
+  "chats":"الدردشات",
+  "myOrders":"طلباتي",
+  "myProfile":"ملفي",
+  "aboutUs":"معلومات عنا",
+  "termsConditions":"البنود و الظروف",
+  "privacyPolicy":"سياسة الخصوصية",
+  "helpCenter":"مركز المساعدة"
  },
  "Categories":{
   "apparels":"ملابس",
