--- a/i18n/en.json
+++ b/i18n/en.json
@@ -310,14 +310,14 @@
  },
  "footer":{
   "copyrightName":"© Copyright company name, 2021",
-  "text1":"Wishlists",
-  "text2":"Chats",
-  "text3":"My orders",
-  "text4":"My Profile",
-  "text5":"About us",
-  "text6":"Terms & conditions",
-  "text7":"Privacy policy",
-  "text8":"Help center"
+  "wishlists":"Wishlists",
+  "chats":"Chats",
+  "myOrders":"My orders",
+  "myProfile":"My Profile",
+  "aboutUs":"About us",
+  "termsConditions":"Terms & conditions",
+  "privacyPolicy":"Privacy policy",
+  "helpCenter":"Help center"
  },
  "Categories":{
   "apparels":"Apparels",
